# usermode

./: .cvsignore  .gitignore  .hgignore  .hgtags  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  autogen.sh  config.h.in  configure.ac  configure.in  consolehelper.8  consolehelper.8.in  consolehelper.c  dummy.h  glade.strings  glade.strings.h  gsmclient.c  keys.xpm  marshal.list  pam-panel-icon.1  pam-panel-icon.c  pam_timestamp_init.console  pam_timestamp_init.pamd  props.c  reaper.c  shutdown  shutdown.pamd  shutdown.pamd.6x  shvar.c  test-userdialog.c  userdialogs.c  userdialogs.h  userhelper-wrap.c  userhelper-wrap.h  userhelper.8  userhelper.8.in  userhelper.c  (+21 more)
.tx/: config
po/: LINGUAS  Makefile  POTFILES.in  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  es.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  (+45 more)
