AC_INIT(usermode.spec)
AM_INIT_AUTOMAKE(usermode,`awk '/^Version:/ { print $$2 }' usermode.spec`)
AC_PREFIX_DEFAULT(/usr)
AC_PROG_CC
AC_PATH_PROG(MOUNT,mount,/bin/mount,[/sbin:/bin:/usr/sbin:/usr/bin])
AC_PATH_PROG(UMOUNT,umount,/bin/umount,[/sbin:/bin:/usr/sbin:/usr/bin])
AC_PATH_PROG(MKFS,mkfs,/sbin/mkfs,[/sbin:/bin:/usr/sbin:/usr/bin])
AC_PATH_PROG(FDFORMAT,fdformat,/usr/bin/fdformat,[/sbin:/bin:/usr/sbin:/usr/bin])
AC_DEFINE_UNQUOTED(PATH_MOUNT,"$MOUNT",[path to the mount command])
AC_DEFINE_UNQUOTED(PATH_UMOUNT,"$UMOUNT",[path to the umount command])
AC_DEFINE_UNQUOTED(PATH_FDFORMAT,"$FDFORMAT",[path to the fdformat command])
AC_DEFINE_UNQUOTED(PATH_MKFS,"$MKFS",[path to the mkfs command])
ALL_LINGUAS="bs cs da de es eu_ES fi fr gl hu id is it ja ko no pl pt_BR pt ro ru sk sl sr sv tr uk wa zh_CN zh_TW"
GETTEXT_PACKAGE=usermode
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL
PKG_CHECK_MODULES(GLIB,glib-2.0)
PKG_CHECK_MODULES(LIBGLADE,libglade-2.0)
PKG_CHECK_MODULES(LIBUSER,libuser)
AC_CHECK_FUNC(pam_start,,[AC_CHECK_LIB(pam,pam_start,PAM_LIBS="-lpam -ldl",dl)])
AC_CHECK_FUNC(misc_conv,,[AC_CHECK_LIB(pam_misc,misc_conv,PAM_LIBS="-lpam_misc $PAM_LIBS",$PAM_LIBS)])
AC_SUBST(PAM_LIBS)

AC_DEFINE(GTK_DISABLE_DEPRECATED,,[Disable use of deprecated GTK+ APIs.])

GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`  
AC_SUBST(GLIB_GENMARSHAL)

test "x$prefix" = xNONE && prefix=$ac_default_prefix
test "x$exec_prefix" = xNONE && exec_prefix=${prefix}

BINDIR=`eval echo ${bindir}`
AC_DEFINE_UNQUOTED(BINDIR,"$BINDIR","/usr/bin")
SBINDIR=`eval echo ${sbindir}`
AC_DEFINE_UNQUOTED(SBINDIR,"$SBINDIR","/usr/sbin")
DATADIR=`eval echo ${datadir}`
AC_DEFINE_UNQUOTED(DATADIR,"$DATADIR","/usr/share")
AC_DEFINE_UNQUOTED(LOCALEDIR,"$DATADIR/locale","/usr/share/locale")
SYSCONFDIR=`eval echo ${sysconfdir}`
AC_DEFINE_UNQUOTED(SYSCONFDIR,"$SYSCONFDIR","/etc")
AC_SUBST(BINDIR)
AC_SUBST(SBINDIR)
AC_SUBST(DATADIR)
AC_SUBST(SYSCONFDIR)
AC_ARG_ENABLE(debug,
[  --enable-debug         Enable debugging messages],
AC_DEFINE(DEBUG_USERHELPER,1,[enable debugging messages]))
AM_CONFIG_HEADER(config.h)

if test x$GCC = xyes ; then
	CFLAGS="$CFLAGS -Wall -Wuninitialized -Wunused -std=c99 -D_GNU_SOURCE"
fi

AC_OUTPUT([ po/Makefile.in
Makefile
consolehelper.8
userhelper.8
])
